--- a/overview/architecture-concepts/integration-and-dependencies.mdx
+++ b/overview/architecture-concepts/integration-and-dependencies.mdx
@@ -1,204 +1,153 @@
 ---
-title: "Integration & Dependencies"
-description: "Explains how GoogleTest can be incorporated into existing C++ projects, its relationship to GoogleMock, and typical integration scenarios (e.g., Bazel and CMake). Covers planned and current third-party integrations (such as Abseil) and how these enable broader adoption."
+title: "Integration and Extensibility"
+description: "Understand how GoogleTest plugs into build systems (CMake, Bazel), how it can integrate with CI/CD, and the ways it interoperates with external tools and libraries. Learn about planned dependencies such as Abseil, and discover extension points for custom assertions and reporting."
 ---
 
-# Integration & Dependencies
+# Integration and Extensibility
 
-GoogleTest is designed to seamlessly integrate into your existing C++ projects and adapt to your build environment, whether you're using common build systems like Bazel or CMake or leveraging third-party libraries like Abseil to extend functionality. This page walks you through how to incorporate GoogleTest effectively, its relationship with GoogleMock, and how popular dependencies enable GoogleTest's wide adoption.
-
----
-
-## Incorporating GoogleTest Into Your Projects
-
-Bringing GoogleTest into your C++ project is straightforward. The framework provides flexible options that accommodate different build system setups and project structures.
-
-### Using CMake
-
-GoogleTest comes with its own CMake build scripts that work across platforms. Depending on your needs, you can either build GoogleTest as a standalone project or embed it directly into your existing CMake build.
-
-#### Standalone Build
-
-To build GoogleTest on its own, you typically clone the repository, create a build directory, and run CMake:
-
-```bash
-git clone https://github.com/google/googletest.git -b v1.17.0
-cd googletest
-mkdir build
-cd build
-cmake ..
-make
-sudo make install
-```
-
-By default, GoogleMock is included in this build. If you want to build only GoogleTest (without GoogleMock), pass the option `-DBUILD_GMOCK=OFF` to CMake:
-
-```bash
-cmake .. -DBUILD_GMOCK=OFF
-```
-
-This approach generates native project files suitable for your platform and compiler (Makefiles on Linux, Visual Studio projects on Windows, Xcode projects on Mac OS X).
-
-#### Embedding in an Existing CMake Project
-
-For projects that already use CMake, you have two preferred methods:
-
-- **Link to Installed GoogleTest:** Assuming GoogleTest is installed on your system, you can use CMake's `find_package` to import GoogleTest. For example:
-
-  ```cmake
-  find_package(GTest CONFIG REQUIRED)
-
-  add_executable(my_test main_test.cpp)
-  target_link_libraries(my_test GTest::gtest GTest::gtest_main)
-  add_test(NAME my_test COMMAND my_test)
-  ```
-
-- **Build GoogleTest as Part of Your Project:** You can add GoogleTest source to your project using `add_subdirectory()`, ensuring consistent compiler and linker settings to avoid issues, especially on Windows.
-
-  To do this, you can add the following in your `CMakeLists.txt` to download and configure GoogleTest dynamically:
-
-  ```cmake
-  include(FetchContent)
-  FetchContent_Declare(
-      googletest
-      URL https://github.com/google/googletest/archive/5376968f6948923e2411081fd9372e71a59d8e77.zip
-  )
-  set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-  FetchContent_MakeAvailable(googletest)
-
-  add_executable(example example.cpp)
-  target_link_libraries(example gtest_main)
-  add_test(NAME example_test COMMAND example)
-  ```
-
-This flexible approach ensures you can keep GoogleTest up to date and consistent with your project's build configuration.
-
-### Using Bazel
-
-GoogleTest also supports Bazel, a fast and extensible build and test system. When using Bazel, GoogleTest and GoogleMock are typically added as external dependencies, managed via Bazel WORKSPACE and BUILD files.
-
-With Bazel, integration is simplified due to its hermetic builds and dependency management. GoogleTest's Bazel setup ensures you always have consistent builds and test runs.
-
-> For details on Bazel integration, please consult your project's Bazel documentation or GoogleTest's Bazel examples repository.
+GoogleTest's Integration and Extensibility page opens a direct window into how GoogleTest and GoogleMock effortlessly plug into your development workflows, build pipelines, and external tooling. Here, you’ll discover the practical paths for embedding GoogleTest into popular build systems, enriching your continuous integration and delivery (CI/CD) setups, and enhancing your tests with powerful extensions.
 
 ---
 
-## Relationship with GoogleMock
+## Unlocking Seamless Build System Integration
 
-GoogleMock (often referred to as gMock) is closely tied with GoogleTest. It offers a powerful and expressive mocking framework for C++ that helps you write tests focusing on interactions between objects.
+Integrating GoogleTest with your build system is the foundation for smooth automated testing. This page guides you through configuring GoogleTest with leading build systems like CMake and Bazel — the tools many modern C++ projects rely on.
 
-- GoogleMock is bundled with GoogleTest and is included by default when you build GoogleTest.
-- The two share similar design goals: enabling reliable, maintainable, and fast C++ tests.
-- You can choose to build only GoogleTest without GoogleMock if you don't need mocking capabilities.
+### Why Integrate GoogleTest with Build Systems?
 
-The tight integration means you use both in a complementary fashion:
+- **Automate Test Compilation:** Automatically compile test binaries with optimized flags and dependencies.
+- **Manage Dependencies Easily:** GoogleTest’s planned dependencies, such as the Abseil library, are managed seamlessly through the build tools.
+- **Enable Incremental Builds:** Efficiently rebuild only what’s changed, boosting your productivity.
 
-- Use **GoogleTest** for organizing and running tests and making assertions on results.
-- Use **GoogleMock** for creating mock objects that simulate parts of your system that are complicated, slow, or unavailable.
+### How It Works
 
-Our [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) and [Mocking Reference](reference/mocking.md) documents provide practical examples and guidance.
+- **CMake Integration:** GoogleTest provides official CMake support with targets that you can link against your test executables without hassle.
+- **Bazel Support:** Bazel users benefit from preconfigured build rules that streamline adding GoogleTest to your workspace.
+- **Planned Abseil Dependency:** To strengthen the internal robustness and compatibility, GoogleTest plans to depend on the Abseil library, a collection of foundational C++ libraries by Google.
 
----
-
-## Third-Party Integrations
-
-GoogleTest leverages and interoperates with several third-party libraries to enhance its capabilities and fit well in larger ecosystems.
-
-### Abseil
-
-Abseil provides a collection of C++ common libraries designed to augment the STL. GoogleTest depends on select components of Abseil, providing:
-
-- Compatibility layers for platform-specific features.
-- Utilities for managing flags and synchronization.
-- Enhanced string handling and memory management helpers.
-
-Using GoogleTest in projects that already use Abseil is often seamless. GoogleTest’s compatibility with Abseil broadens its reach and adoption among teams relying on Google's C++ foundational libraries.
-
-> For specifics on GoogleTest’s dependencies on Abseil and usage recommendations, refer to the Integration & Dependencies section of GoogleTest’s repository.
+> **Tip:** For exact steps and example configurations, see the installation and setup pages linked below.
 
 ---
 
-## Ensuring Compatibility and Tweaks
+## Elevating Your CI/CD Pipeline with GoogleTest
 
-GoogleTest requires a minimum environment that supports C++17. You can enforce this in your build system, for example in CMake:
+GoogleTest’s design helps you inject reliable testing into your CI/CD pipelines, enabling early detection of issues, faster feedback, and higher confidence in your code.
 
-```cmake
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-```
+### Key Benefits:
 
-### Tweaking GoogleTest Behavior
+- **Test Automation:** Run your test suites automatically on every code change or schedule.
+- **Rich Reporting:** Supports detailed test output compatible with popular CI tools.
+- **Leak Detection and Warnings:** Offers flags like `--gmock_catch_leaked_mocks` and verbosity controls to tailor output for actionable insights.
 
-GoogleTest allows advanced users to customize its behavior through compiler-defined macros typically prefixed by `GTEST_`. These controls enable fine-tuning such as:
+### Getting Started with CI Systems
 
-- Enabling or disabling pthread usage for thread safety.
-- Adjusting linking of runtime libraries, important especially on Windows concerning dynamic versus static CRT linkage.
-- Renaming GoogleTest macros to avoid clashes with macros from other libraries.
+- Configure your build tool to compile GoogleTest alongside your code.
+- Use the main test binary (available via the `gmock_main` target) to kick off all tests.
+- Leverage GoogleTest and GoogleMock command-line flags to control verbosity and leak detection for CI-friendly output.
 
-Refer to GoogleTest’s internal header [`include/gtest/internal/gtest-port.h`](https://github.com/google/googletest/blob/main/googletest/include/gtest/internal/gtest-port.h) for a full list of control macros.
-
----
-
-## Summary: Bringing it All Together
-
-Whether you are starting fresh or integrating GoogleTest into a large existing C++ codebase, the framework offers flexibility and best-in-class compatibility:
-
-- Build system integration through CMake and Bazel supports most workflows.
-- GoogleMock’s inclusion provides robust mocking alongside assertion support.
-- Third-party dependencies like Abseil underscore GoogleTest’s reliability and compatibility.
-- Practical guidelines ensure smooth builds and test runs across platforms.
-
-By following the examples and recommendations here, you can make GoogleTest a natural part of your testing process.
+> **Best Practice:** Control verbosity via `--gmock_verbose=info|warning|error` to balance detailed reporting and noise.
 
 ---
 
-## Troubleshooting Common Integration Issues
+## Extending GoogleMock for Maximum Flexibility
 
-<AccordionGroup title="Integration Troubleshooting">
-<Accordion title="Build Errors on Windows with Visual Studio Runtime Library Mismatch">
-GoogleTest links the C runtime (CRT) statically by default, while many new Visual Studio projects link it dynamically. This mismatch causes linker errors such as `LNK2038`.
+Test needs evolve — GoogleMock anticipates this with extensibility to tailor assertions, mock behaviors, and reporting.
 
-**Solution:** Enable dynamic linking of the CRT in GoogleTest by passing `-Dgtest_force_shared_crt=ON` to your CMake configuration.
+### Planned Extension Points:
 
-```bash
-cmake .. -Dgtest_force_shared_crt=ON
-```
+- **Custom Assertions:** Define your own expressive matchers that fit your domain, enriching test accuracy.
+- **Custom Reporting:** Integrate with external logging and test reporting frameworks for seamless diagnostics.
+- **Advanced Mocking Behaviors:** Extend GoogleMock’s mock method behaviors with custom actions, allowing complex test scenarios.
 
-This makes GoogleTest link to the CRT dynamically, matching typical Visual Studio projects.
+### How Users Benefit:
+
+- Implement domain-specific checks right inside your mocks.
+- Integrate effortlessly with third-party test dashboards or coverage reports.
+- Flexibly control mock outcomes with lambda actions or hand-crafted behaviors.
+
+> **Example:** You can create a matcher that verifies a complex data structure or state and use it in `EXPECT_CALL` to enforce sophisticated expectations.
+
+---
+
+## Summary
+
+This page demystifies how GoogleTest and GoogleMock blend into your existing build ecosystem, empower your CI/CD workflows, and extend to fit your exact testing requirements. Whether you’re optimizing builds with CMake or Bazel, automating tests in continuous integration, or customizing mock behaviors with advanced assertions and reporting, this integration and extensibility guide is your launchpad.
+
+---
+
+## Additional Resources and Next Steps
+
+- [Install GoogleTest with CMake](https://github.com/google/googletest/blob/main/docs/installation.md)
+- [Integrate GoogleTest with Bazel](https://docs.bazel.build/versions/master/tutorial/cpp.html)
+- [Custom Matchers and Actions - gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html#NewMatchers)
+- [Continuous Integration Setup Guides](https://github.com/google/googletest/blob/main/googletest/docs/ci.md)
+- [GoogleMock API Reference](https://google.github.io/googletest/reference/mocking.html)
+
+For a high-level overview of the entire GoogleTest architecture and how mocking fits in, see the [Framework Architecture overview](overview/architecture-concepts/architecture-overview).
+
+---
+
+## Troubleshooting and Tips
+
+<AccordionGroup title="Common Integration Challenges">
+<Accordion title="Build System Issues">
+If your build system doesn't find GoogleTest or GoogleMock headers, verify that your include paths are correctly set, and the targets (e.g., `gmock_main`) are linked properly.
 </Accordion>
-<Accordion title="GoogleTest’s C++ Standard Requirements Not Met">
-GoogleTest requires C++17 support. If your build fails due to missing C++17 features:
-
-- Ensure your compiler supports C++17.
-- Configure your build system to set the C++ standard accordingly.
-
-For example, in CMake:
-
-```cmake
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-```
-
-If you use another build environment, check its documentation on specifying the C++ standard.
+<Accordion title="CI Output Too Verbose or Missing Info">
+Adjust the flag `--gmock_verbose` to control detail level in output. Default is `warning`. Use `info` to get detailed traces or `error` to mute warnings.
 </Accordion>
-<Accordion title="Linker Errors Due to Multiple Definitions or Missing Symbols">
-This usually happens when GoogleTest is built multiple times inconsistently or when mixing debug and release builds.
-
-**Tips:**
-
-- Ensure the same compiler and linker flags are used for GoogleTest and for your tests.
-- Build GoogleTest as part of your project to keep build parameters in sync.
-- On Windows, be cautious with runtime library linkage options (`MT` vs `MD`).
+<Accordion title="Extending with Custom Matchers Fails to Compile">
+Ensure you define your matchers using the recommended macros or interfaces, and that you include `gmock/gmock.h` in your test files.
 </Accordion>
 </AccordionGroup>
 
+<Note>
+Remember, GoogleTest’s extensibility and integrations are actively evolving. Stay updated with the latest releases and documentation to utilize planned dependencies like Abseil and new extension points fully.
+</Note>
+
 ---
 
-## Next Steps
+## Example: Integrating GoogleTest with CMake
 
-- To get started writing tests after integrating GoogleTest, see [Your First Test: Basic Usage](/getting-started/project-setup/first-test).
-- For details on configuring test execution options, visit [Configuring Test Execution](/getting-started/project-setup/configuration-options).
-- To explore how GoogleTest and GoogleMock interact during test runs, check [System Architecture Overview](/overview/architecture-concepts/system-architecture).
+```cmake
+# Find GoogleTest package
+find_package(GTest REQUIRED)
 
+# Add your test executable
+add_executable(my_tests tests/my_tests.cc)
 
-<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "googletest/README.md", "range": "1-200"},{"path": "docs/gmock_for_dummies.md", "range": "1-180"},{"path": "docs/gmock_cheat_sheet.md", "range": "1-150"}]}/>
+# Link against GoogleTest and pthread
+target_link_libraries(my_tests GTest::gtest_main pthread)
+
+# Enable testing
+enable_testing()
+add_test(NAME MyTests COMMAND my_tests)
+```
+
+Running `ctest` will now discover and run your GoogleTest-based tests.
+
+## Example: Setting Default Mock Action in Test Setup
+
+```cpp
+using ::testing::Return;
+using ::testing::_;  // wildcard matcher
+
+class MyMock : public SomeInterface {
+ public:
+  MOCK_METHOD(int, Compute, (int x), (override));
+};
+
+TEST(MyTestSuite, UsesDefaultActions) {
+  MyMock mock;
+  ON_CALL(mock, Compute(_)).WillByDefault(Return(42));
+
+  EXPECT_CALL(mock, Compute(10)); // Expect call
+
+  EXPECT_EQ(mock.Compute(10), 42);  // Uses expectation
+  EXPECT_EQ(mock.Compute(20), 42);  // Uses default action
+}
+```
+
+This example demonstrates setting up default behavior and specific expectations.
+
+---
