--- a/getting-started/installation-configuration/install-cmake.mdx
+++ b/getting-started/installation-configuration/install-cmake.mdx
@@ -1,279 +1,234 @@
 ---
 title: "Install with CMake"
-description: "Follow detailed instructions to install and integrate GoogleTest/GoogleMock into your project using CMake. Covers fetching sources, adding as a subdirectory, using package configuration, and verifying your CMake setup."
+description: "Follow the recommended workflow to build and install GoogleTest and GoogleMock using CMake. Includes quick commands, troubleshooting common errors, and integrating into your existing CMake project."
 ---
 
 # Install with CMake
 
-Follow detailed instructions to install and integrate GoogleTest and GoogleMock into your C++ projects using CMake. This guide covers fetching sources, adding GoogleTest/GoogleMock as a subdirectory in your build, using package configuration for linking, and verifying your CMake setup with a simple test.
+This guide walks you through the recommended workflow to build and install **GoogleTest** and **GoogleMock** using CMake. You'll find clear, actionable steps to clone the repository, configure the build, compile the libraries, install them on your system, and integrate them into your existing CMake projects. Troubleshooting tips for common issues are included to help you overcome obstacles quickly.
 
 ---
 
-## 1. Prerequisites
+## 1. Prerequisites & System Requirements
 
-Before starting, ensure you have the following ready:
+Before you begin, ensure your environment meets the following:
 
-- **Operating System:** Linux, macOS, or Windows compatible with your toolchain.
-- **C++ Compiler:** Supports at least C++17 standard.
-- **CMake:** Version 3.14 or higher. Download from [https://cmake.org/](https://cmake.org/).
-- **Build Tool:** Compatible with chosen generator (e.g., Make, Ninja, Visual Studio).
+- **Operating System**: Linux, macOS, or Windows (with appropriate build tools).
+- **C++ Compiler**: Supports C++17 standard or higher (e.g., GCC 7+, Clang 7+, MSVC 2017+).
+- **CMake**: Version 3.14 or later is required.
+- **Build Tools**:
+  - Linux/macOS: Make, Ninja, or similar.
+  - Windows: Visual Studio with C++ workloads.
+- **Network Access**: To clone the GitHub repository or download dependencies.
 
 <Tip>
-Using CMake 3.14 or above is essential for smooth integration, especially leveraging the FetchContent module.
+GoogleTest’s CMake support is community-based. The maintainers do not use it internally, so some behavior may vary. Follow this guide to ensure a robust setup.
 </Tip>
 
----
+## 2. Cloning and Building GoogleTest with GoogleMock
 
-## 2. Fetching and Building GoogleTest Standalone
+By default, building GoogleTest also builds GoogleMock.
 
-This method builds GoogleTest (and optionally GoogleMock) as a separate project.
+### Step 1: Clone the Repository
 
-### Steps:
-
-<Steps>
-<Step title="Clone the GoogleTest repository">
-Run:
+Open a terminal or command prompt and enter:
 
 ```bash
-git clone https://github.com/google/googletest.git -b v1.17.0
-git checkout main  # Optional: to get the latest main branch
-```
-
-This clones the official repository at the specified release tag.
-</Step>
-
-<Step title="Create a build directory">
-
-```bash
+git clone https://github.com/google/googletest.git -b main
 cd googletest
-mkdir build && cd build
 ```
 
-Keep build output isolated for cleanliness.
-</Step>
+### Step 2: Create a Build Directory
 
-<Step title="Configure with CMake">
+To keep build files separate from source, create a dedicated directory:
 
-By default, both GoogleTest and GoogleMock are built:
+```bash
+mkdir build
+cd build
+```
+
+### Step 3: Configure the Build
+
+Run CMake to generate platform-native build files. This command also includes GoogleMock by default:
 
 ```bash
 cmake ..
 ```
 
-To build only GoogleTest, disable GoogleMock:
+If you want to build only GoogleTest without GoogleMock, disable it explicitly:
 
 ```bash
 cmake .. -DBUILD_GMOCK=OFF
 ```
 
-This generates platform native build files (Makefile, Visual Studio solution, etc.).
-</Step>
+### Step 4: Build the Libraries
 
-<Step title="Build the project">
+- **On Linux/macOS with Make:**
 
-On Linux/macOS:
+  ```bash
+  make
+  ```
 
-```bash
-make
-```
+- **On Windows with Visual Studio:**
+  - Open the generated `.sln` file in the `build` directory.
+  - Build the solution from Visual Studio.
 
-On Windows, use Visual Studio to build the generated solution.
-</Step>
+- **On macOS with Xcode:**
+  - Open the generated `.xcodeproj` file.
+  - Build via Xcode IDE.
 
-<Step title="(Optional) Install the libraries">
-If you have admin permissions and want system-wide access:
+<Tip>
+Building GoogleMock automatically builds GoogleTest as a dependency.
+</Tip>
+
+### Step 5: Install Libraries (Optional)
+
+If you want to install GoogleTest and GoogleMock system-wide (commonly `/usr/local/` on Unix-like systems):
 
 ```bash
 sudo make install
 ```
 
-This will install headers and libraries to `/usr/local/` by default.
-</Step>
-</Steps>
+This step requires system administrator privileges.
 
-<Note>
-When building manually, confirm that your compiler supports C++17 and adjust your environment accordingly.
-</Note>
+<Warning>
+Ensure you have correct permissions before installing. You can customize the install location with `-DCMAKE_INSTALL_PREFIX` during the configuration step.
+</Warning>
 
----
+## 3. Verifying Your Build
 
-## 3. Incorporate GoogleTest Into Your Existing CMake Project
+After building, confirm that the libraries and headers are properly built:
 
-Embed GoogleTest sources directly or use the installed package for seamless integration.
+- Check that `libgtest.a`, `libgmock.a`, or their shared variants exist in the build directory under `lib` or `lib64`.
+- Confirm header files are in the `include` directory.
+- Run provided tests to verify integrity:
 
-### 3.1 Using Installed GoogleTest Package
+```bash
+make test
+# or
+ctest
+```
 
-If GoogleTest is installed on your system, import it via CMake:
+All tests should pass without failures.
+
+## 4. Integrating GoogleTest into Your Existing CMake Project
+
+You can use GoogleTest as an external dependency in your projects using either installed libraries or by building as part of your build.
+
+### Method A: Using Installed GoogleTest with `find_package`
+
+Ensure GoogleTest is installed with CMake export files generated (default behavior if installed using `make install`).
 
 ```cmake
 find_package(GTest CONFIG REQUIRED)
 
-add_executable(my_test my_test.cpp)
-target_link_libraries(my_test GTest::gtest_main)
+add_executable(my_test test/my_test.cc)
+
+target_link_libraries(my_test PRIVATE GTest::gtest_main)
+
 enable_testing()
-add_test(NAME my_test COMMAND my_test)
+gtest_discover_tests(my_test)
 ```
 
-This method requires installed CMake config files and .pc files.
+This method assumes `CMAKE_PREFIX_PATH` includes the GoogleTest install path or the standard system search paths.
 
----
+### Method B: Building GoogleTest as a Subdirectory
 
-### 3.2 Fetch GoogleTest at Configure Time via `FetchContent`
+Add GoogleTest source directly into your project build to ensure consistent compiler and linker settings.
 
-Add the following snippet to your project’s `CMakeLists.txt`:
+Modify your `CMakeLists.txt` as follows:
 
 ```cmake
-cmake_minimum_required(VERSION 3.14)
-project(my_project)
-
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
 include(FetchContent)
+
 FetchContent_Declare(
   googletest
-  URL https://github.com/google/googletest/archive/03597a01ee50ed33e9dfd640b249b4be3799d395.zip
+  URL https://github.com/google/googletest/archive/main.zip
 )
-
-# On Windows, ensure runtimes match
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE) # Windows-specific
 FetchContent_MakeAvailable(googletest)
 
+add_executable(my_test test/my_test.cc)
+
+target_link_libraries(my_test PRIVATE gtest_main)
+
 enable_testing()
-
-add_executable(hello_test hello_test.cpp)
-target_link_libraries(hello_test GTest::gtest_main)
-
-include(GoogleTest)
-gtest_discover_tests(hello_test)
+gtest_discover_tests(my_test)
 ```
-
-This downloads and builds GoogleTest transparently during your build configuration.
 
 <Tip>
-Regularly update the commit hash URL to use the latest Googletest version.
+Using `FetchContent` is the recommended way to include GoogleTest in your project. It downloads and builds GoogleTest automatically during your build.
 </Tip>
 
----
+## 5. Common Build Options
 
-## 4. Building and Running Your First GoogleTest
-
-1. Create a test source file (`hello_test.cpp`) in your project directory:
-
-```cpp
-#include <gtest/gtest.h>
-
-TEST(HelloTest, BasicAssertions) {
-  EXPECT_STRNE("hello", "world");
-  EXPECT_EQ(7 * 6, 42);
-}
-```
-
-2. Build the test executable with CMake:
+- **`BUILD_SHARED_LIBS`**: Set to `ON` to build GoogleTest and GoogleMock as shared libraries (DLLs).
 
 ```bash
-cmake -S . -B build
-cmake --build build
+cmake .. -DBUILD_SHARED_LIBS=ON
 ```
 
-3. Run tests using CTest:
+- **`gtest_force_shared_crt`**: On Windows, set to `ON` to use dynamic CRT linkage matching your project settings.
 
-```bash
-cd build
-ctest
-```
+- **`BUILD_GMOCK`**: Disable or enable building GoogleMock separately when you want only GoogleTest.
 
-Expected output:
-
-```
-Test project /path/to/build
-    Start 1: HelloTest.BasicAssertions
-1/1 Test #1: HelloTest.BasicAssertions ........   Passed    0.00 sec
-
-100% tests passed, 0 tests failed out of 1
-```
-
-<Check>
-Seeing the single passing test confirms your CMake integration and GoogleTest setup are correct.
-</Check>
-
----
-
-## 5. Useful Configuration Options
-
-- **Build GoogleMock alongside GoogleTest (default ON):**
-  - Use `-DBUILD_GMOCK=ON` or `OFF` to control this.
-
-- **Shared vs Static Libraries:**
-  - Control with `BUILD_SHARED_LIBS` option.
-  - On Windows, use `gtest_force_shared_crt` to align runtime linkage.
-
-- **C++ Standard Version:**
-  - GoogleTest requires at least C++17.
-  - Set with `set(CMAKE_CXX_STANDARD 17)` and `set(CMAKE_CXX_STANDARD_REQUIRED ON)`.
-
-- **PThread Support:**
-  - Automatically handled by CMake script.
-  - You can disable with `-Dgtest_disable_pthreads=ON` if needed.
-
----
+- **`INSTALL_GTEST`**: Disable installation of Googletest if embedding it inside another project.
 
 ## 6. Troubleshooting Common Issues
 
-<AccordionGroup title="Troubleshooting GoogleTest CMake Integration">
-<Accordion title="Compiler Does Not Support C++17">
-
-Make sure your compiler version supports C++17. On GCC, version >=7 is recommended. On MSVC, Visual Studio 2017 or later is needed.
-
-</Accordion>
-<Accordion title="CMake Version Too Low">
-
-GoogleTest's FetchContent mandates CMake 3.14+. Upgrade CMake to at least this version.
-
-</Accordion>
-<Accordion title="Linker Errors Related to Runtime Libraries on Windows">
-
-Enable `gtest_force_shared_crt` in your `CMakeLists.txt`:
+<AccordionGroup title="Common Build Problems and Fixes">
+<Accordion title="CMake cannot find C++17 compiler or features">
+Verify your compiler supports C++17. You can explicitly set the C++ standard:
 
 ```cmake
-set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 ```
 
-to ensure consistent runtime linkage.
+Also, ensure the compiler path is correctly configured in your environment.
+</Accordion>
+<Accordion title="Linker errors related to pthread or threads">
+GoogleTest uses threading support. Ensure you have pthreads installed (Linux/macOS) and linked properly.
+
+If using your own build scripts, add `-pthread` to compiler and linker flags.
+
+The CMake scripts handle this automatically.
+</Accordion>
+<Accordion title="Mismatch of Runtime Libraries on Visual Studio builds">
+Use the `gtest_force_shared_crt` option to align GoogleTest runtime with your project to avoid LNK2038 errors.
+
+Invoke CMake with:
+
+```bash
+cmake .. -Dgtest_force_shared_crt=ON
+```
 
 </Accordion>
-<Accordion title="Tests Not Found or Not Run by CTest">
+<Accordion title="Tests are not discovered or running failures">
+Ensure you call `enable_testing()` and use `gtest_discover_tests()` appropriately in your CMake script.
 
-Make sure you include:
-
-```cmake
-include(GoogleTest)
-gtest_discover_tests(target_name)
-```
-
-and run `ctest` inside the build directory.
-
+Run tests using `ctest` or your IDE’s test runner.
 </Accordion>
 </AccordionGroup>
 
----
+## 7. Summary
 
-## 7. Next Steps
+By following this guide, you have successfully cloned, built, installed, and integrated GoogleTest and GoogleMock into your projects with CMake. This foundation allows you to write, build, and run robust C++ tests leveraging GoogleTest’s powerful features.
 
-- Explore [Writing Your First Test Case](../guides/getting-started/writing-your-first-test) for an in-depth test authoring guide.
-- Review [Project Structure Overview](../getting-started/environment-setup/project-structure-overview) for understanding the repo layout.
-- Learn about [Pkg-config and Other Installation Methods](./pkg-config-and-other-methods) for alternate build integrations.
-- Browse example tests and samples in the `samples/` directory for real-world usage.
+For your next steps, consider:
 
----
-
-For full details, see the [GoogleTest repository CMakeLists.txt](https://github.com/google/googletest/blob/main/CMakeLists.txt) and the official [googletest README](https://github.com/google/googletest/blob/main/googletest/README.md).
+- Writing your first test case using GoogleTest assertions.
+- Exploring mocking capabilities with GoogleMock.
+- Reviewing the [GoogleTest Primer](https://google.github.io/googletest/primer.html) for test writing fundamentals.
 
 ---
 
-<Info>
-This page focuses exclusively on installing and integrating GoogleTest/GoogleMock via CMake. For Bazel users, refer to the [Quickstart for Bazel](quickstart-bazel.md).
-</Info>
+## Additional Resources
 
----
+- [GoogleTest GitHub Repository](https://github.com/google/googletest)
+- [CMake Official Site](https://cmake.org/)
+- [GoogleTest Primer Guide](https://google.github.io/googletest/primer.html)
+- [Getting Started with GoogleTest](../getting-started/installation-configuration/install-cmake.md)
+- [Troubleshooting Common Issues](../getting-started/troubleshooting/common-issues.md)
+
+<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "googletest/README.md", "range": "1-120"},{"path": "googletest/CMakeLists.txt", "range": "1-150"},{"path": "googlemock/CMakeLists.txt", "range": "1-130"}]} />
